# efficient-vocabulary

./: .gitignore  README.md  database.py  main.py  out.txt  parse-srt.py  pyproject.toml  save.py  test.ipynb
app/: database.py  nltk.py  parse_srt.py  parse_words.py
database/: database-schema.sql
notebook/: test.ipynb  test.py  typer_test.py
subtitles/: sample_subtitle.srt
